Possible fix for select style on Safari for iOS

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,14 @@ body {
     color: $font-color;
 }
 
+select.iOS {
+    -webkit-appearance: none !important;
+    background-color: skyblue !important;
+    background-image: url("images/iOS-select-arrow") !important;
+    background-position: right center !important;
+    background-repeat: no-repeat !important;
+}
+
 #overlay {
     display: none;
     position: fixed;
@@ -210,7 +218,7 @@ body {
             padding: 0;
 
             &.today {
-                text-decoration: underline;
+                text-decoration: solid underline 3px;
             }
             &.not-this-month {
                 color: $greyed-font-color;
